[project]
name = "smartnavigation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "networkx>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
main = "main:main"

[tool.uv]
package = true
